[package]
name = "sr-counter"
version = "0.1.0"
authors = ["Wink Saville <wink@saville.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
pico-args = "0.4.2"
serde = { version = "1.0.79", features = ["rc"] }
serde_json = "1.0.79"
stateright = "0.29.0"
